# 123

rickroll/: Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rickroll/data/: links.txt
rickroll/src/rickroll/: app.py  config.py  database.py  main.py  models.py  utils.py
rickroll/src/rickroll/routes/: game.py  links.py
rickroll/web/: game.html  index.html  redirect.html  shortener.html
rickroll/web/js/: game.js  redirect.js  shortener.js
