[project]
name = "rickroll"
version = "1.0.0"
description = "Best link shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.0",
    "black>=24.0.0",
]

[project.scripts]
rickroll = "rickroll.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
